examples/test/testpolicy4790.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4790
  namespace: namespace140
spec:
  podSelector:
    matchLabels:
      key19: value45
      key45: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value40
          key1: value13
          key20: value20
      podSelector:
        matchLabels:
          key41: value39
